[tool.poetry]
name = "advent-of-code-2025"
version = "0.1.0"
description = ""
authors = ["chhk <chorhatarahuduketuri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
