[tool.poetry]
name = "advent-of-code-2025"
version = "0.1.0"
description = ""
authors = ["chhk <chorhatarahuduketuri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
black = "^25.11.0"
mypy = "^1.19.0"
ruff = "^0.14.7"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
